# Syntax_Tree_Calculator

./: .gitignore  AST.cpp  AST.h  CMakeLists.txt  CONTRIBUTING.md  MainWindow.h  README.md  main.cpp  mainwindow.cpp  repro_bug.cpp  resources.qrc
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
scripts/: bump-version.ps1
